cmake_minimum_required(VERSION 3.20)
project(Algoritmos1)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algoritmos1 main.cpp biblioteca/funciones/files.h biblioteca/funciones/arrays.h biblioteca/funciones/lists.h biblioteca/funciones/strings.h biblioteca/funciones/tokens.h biblioteca/programas/leccion8/busqueda/busquedaBinaria.h biblioteca/programas/leccion8/busqueda/busquedaLineal.h biblioteca/programas/leccion8/ordenamiento/burbujeo.h biblioteca/programas/leccion8/ordenamiento/burbujeoMejorado.h biblioteca/programas/leccion8/ordenamiento/insercionAvanzada.h biblioteca/programas/leccion8/ordenamiento/insercionSimple.h biblioteca/programas/leccion9/estructuraDatos1.h biblioteca/tads/Array.h biblioteca/tads/Coll.h biblioteca/tads/List.h biblioteca/tads/Map.h biblioteca/tads/Queue.h biblioteca/tads/Stack.h biblioteca/tads/huffman/HuffmanSetup.h biblioteca/tads/huffman/Progress.h)
